# layer-android-i2c-library

./: .gitignore  README.md  build.gradle.kts  local.properties  settings.gradle.kts
.claude/: settings.local.json
.github/: CODEOWNERS
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/main/cpp/: CMakeLists.txt  I2cNative.c  I2cNative.h
src/main/java/com/layer/hardware/: DeviceUtils.kt
src/main/java/com/layer/i2c/: AS7341Sensor.kt  AS7343Sensor.kt  AS73XXSensor.kt  ChipMaxThermalSensor.kt  DeviceDetection.kt  DeviceNodeSensor.kt  GpuZoneSensor.kt  I2CBusManager.kt  I2CDetect.kt  I2CSensor.kt  I2CSensorBus.kt  I2CState.kt  I2cNative.java  SHT40Sensor.kt  SensorDemo.kt  SensorManager.kt  SpectralSensor.kt  TCA9548Multiplexer.kt  ThermalZoneSensor.kt
